InsuranceLicensePackage/src/objects/NIPR_Sync_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForceExpire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIPR_Integration_User_Name__c</fullName>
        <label>NIPR Integration User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NIPR Sync Setting</label>
</CustomObject>